# synclan

./: .gitignore  .lintstagedrc.js  .oxfmtrc.json  .oxlintrc.json  .prettierignore  Cargo.toml  Makefile.toml  README-en.md  README.md  UPDATELOG.md  eslint.config.js  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  rustfmt.toml  tsconfig.app.json  tsconfig.node.json  vite.config.main.ts  vite.config.web.ts  vitest.config.ts
.github/: renovate.json
.github/ISSUE_TEMPLATE/: bug_report.yml  feature_request.yml
.github/workflows/: cross_check.yaml  frontend-check.yml  lint-clippy.yml  release.yml  rustfmt.yml
.zed/: settings.json
scripts/: extract_update_logs.sh  set-updater-channel.mjs  updatelog.mjs  updater-fixed-webview2.mjs  updater.mjs
src/: App.tsx  app-context.tsx  app.tsx  global.css  index.html  main.tsx  preview.html  routes.tsx  synclan.d.ts  vite-env.d.ts
src-tauri/: .gitignore  Cargo.toml  tauri.conf.json  tauri.linux.conf.json  tauri.macos.conf.json  tauri.windows.conf.json  webview2.arm64.json  webview2.x64.json
src-tauri/capabilities/: default.json
src-tauri/icons/: IconAssets.car  icon.icns
src-tauri/icons/AppIcon.icon/: icon.json
src-tauri/resources/migrations/: 20250604035105_init.sql
src-tauri/src/: lib.rs  main.rs
src-tauri/src/cmd/: app.rs  client.rs  device.rs  message.rs  mod.rs  server.rs  synclan.rs  system.rs  webview_window.rs
src-tauri/src/config/: config.rs  draft.rs  encrypt.rs  mod.rs  synclan.rs
src-tauri/src/core/: autostart.rs  handle.rs  logger.rs  mod.rs  tray.rs
src-tauri/src/feat/: app.rs  config.rs  device.rs  messsage.rs  mod.rs  server.rs  system.rs  webview_window.rs  window.rs
src-tauri/src/module/: client.rs  device.rs  message.rs  mod.rs
src-tauri/src/process/: async_handler.rs  mod.rs
src-tauri/src/server/: api_doc.rs  exception.rs  mod.rs  status_code_serde.rs
src-tauri/src/server/dtos/: device_dto.rs  message_dto.rs  mod.rs  synclan_dto.rs  upload_dto.rs
src-tauri/src/server/events/: handlers.rs  mod.rs  store.rs
src-tauri/src/server/extractors/: body_extractor.rs  mod.rs  param_extractor.rs  query_extractor.rs
src-tauri/src/server/guards/: auth_guard.rs  mod.rs
src-tauri/src/server/routes/: device.rs  message.rs  mod.rs  synclan.rs  upload.rs  user.rs
src-tauri/src/server/workers/: message.rs  mod.rs
src-tauri/src/utils/: db.rs  dirs.rs  help.rs  i18n.rs  init.rs  logging.rs  mod.rs  resolve.rs  schtasks.rs  tls.rs  window_manager.rs
src-tauri/src/utils/linux/: workarounds.rs
src-tauri/src/utils/resolve/: mod.rs  window.rs  window_script.rs
src-web/: App.tsx  index.html
src/assets/: loading_screen.lottie
src/components/: app-sidebar.tsx  composition-input.tsx  confirm-dialog.tsx  device-discover.tsx  device-switcher.tsx  drag-upload-overlay.tsx  floating-context-menu.tsx  image-preview-provider.tsx  index.ts  layout.tsx  loading-screen.tsx  nav-devices.tsx  nav-main.tsx  nav-projects.tsx  nav-user.tsx  qrcode-dialog.tsx  qrcode.tsx  tauri-drag-area.tsx  transmitter-more-menu.tsx  transmitter.tsx  update-dialog.tsx
src/components/emoji/: emoji-button.tsx  emoji-category.tsx  emoji-node.tsx  emoji-picker.tsx  emoji.tsx  index.ts  lib.ts
src/components/extensions/: drag-drop-paste-extension.ts  editor-extension.ts  image-extension.tsx  index.ts
src/components/form/: search-form.tsx
src/components/messages/: index.ts  message-animated-wrapper.tsx  message-context-menu.tsx  message-expandable.tsx  message-file.tsx  message-image.tsx  message-text.tsx  message-video.tsx  message-wrapper.tsx  message.d.ts  util.ts
src/components/nodes/: code-plus-node.ts  emoji-node.tsx  image-component.tsx  image-node.tsx  index.ts  pre-link.ts  quote-paragraph-node.ts  simple-list-item-node.ts  simple-list-node.ts  simple-quote-node.ts  utils.ts
src/components/plugins/: auto-line-plugin.tsx  clear-selection-plugin.ts  code-behavior-plugin.ts  code-high-light-shiki-plugin.ts  code-node-toolbar-pligin.tsx  code-node-toolbar-plugin.tsx  emoji-picker-plugin.tsx  emoji-plugin.ts  empty-block-to-paragraph-plugin.ts  enter-behavior-plugin.ts  enter-plugin.ts  fix-empty-quote-after-delete-plugin.ts  fix-text-format-plugin.ts  floating-link-editor-plugin.tsx  floating-text-format-toolbar-plugin.tsx  image-plugin.tsx  index.ts  is-empty-plugin.ts  is-focused-plugin.ts  lib.ts  link-plugin.tsx  ordered-list-recompute-plugin.tsx  plugin.d.ts  shortcuts-plugin.ts
src/components/transformers/: code-plus.transformer.ts  element.transformer.ts  index.ts  text-match.transformer.ts
src/components/ui/: alert-dialog.tsx  aspect-ratio.tsx  attachment.tsx  avatar.tsx  badge.tsx  breadcrumb.tsx  bubble.tsx  button.tsx  card.tsx  carousel.tsx  collapsible.tsx  command.tsx  context-menu.tsx  dialog.tsx  dropdown-menu.tsx  field.tsx  image-resizer.tsx  index.ts  input.tsx  item.tsx  kbd.tsx  label.tsx  message-scroller.tsx  message.tsx  popover.tsx  progress.tsx  resizable.tsx  scroll-area.tsx  separator.tsx  sheet.tsx  sidebar.tsx  skeleton.tsx  sonner.tsx  spinner.tsx  switch.tsx  table.tsx  toggle-group.tsx  toggle.tsx  tooltip.tsx
src/hooks/: index.ts  use-latest-ref.ts  use-socketio.ts  use-theme.ts
src/lib/: api.ts  attachment.ts  constant.ts  db.ts  device.ts  i18n.ts  media.ts  message-animations.ts  resource.ts  types.ts  updater.ts
src/lib/utils/: apply-theme.ts  client.d.ts  client.util.ts  fingerprint.util.ts  get-own.ts  index.ts  side-bar-width.util.ts  url.ts
src/locales/: en.json  zh_CN.json
src/pages/: home.tsx
src/pages/account/: index.tsx
src/pages/conversation/: index.tsx  layout.tsx  nav-side-bar.tsx
src/pages/device/: index.tsx
src/pages/devices/: header.tsx  index.tsx
src/pages/home/: index.tsx
src/preview/: app.tsx  index.html  preview.d.ts
src/services/: api.ts  cmd.ts  init.ts  synclan.d.ts  upload.ts
src/stores/: app-server.store.ts  app.store.ts  attachment.store.ts  conversations.store.ts  device.store.ts  im.store.ts  index.ts  message-animation.store.ts  synclan.store.ts  updater.store.ts
src/styles/: editor.css  global.css
(+13 files in other folders)
