[workspace]
resolver = "2"
members = ["src-tauri"]

[workspace.dependencies]
anyhow = "1.0.103"
bitflags = { version = "2.13.1" }
flexi_logger = "0.31.9"
log = "0.4.33"
parking_lot = { version = "0.12.5", features = ["hardware-lock-elision"] }
serde = { version = "1.0.228" }
serde_json = { version = "1.0.150" }
serde_yaml_ng = { version = "0.10.0" }
tauri = { version = "2.11.5" }
thiserror = { version = "2.0.18" }
tokio = { version = "1.53.0", features = ["full"] }

deelevate = "0.2.0"

[workspace.lints.clippy]
correctness = { level = "deny", priority = -1 }

single_match = "allow"
tabs_in_doc_comments = "allow"

[profile.release]
opt-level = "s"
strip = true
lto = "thin"
panic = "abort"
codegen-units = 1
