[package]
name = "synclan"
version = "0.1.0"
description = "A Tauri App"
authors = ["The1111mp@outlook.com"]
edition = "2021"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "synclan_lib"
crate-type = ["staticlib", "cdylib", "rlib"]

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
aes-gcm = { version = "0.10", features = ["std"] }
anyhow = "1"
axum = { version = "0.8", features = ["multipart"] }
axum-extra = { version = "0.10", features = ["typed-header"] }
axum-macros = "0.5"
axum-server = { version = "0.7", features = ["tls-rustls"] }
axum_typed_multipart = "0.16"
base64 = "0.22"
chrono = "0.4"
dark-light = "2"
getrandom = "0.3"
libsqlite3-sys = { version = "0.30", features = [
	"bundled-sqlcipher-vendored-openssl",
] }
local-ip-address = "0.6"
log = "0.4"
log4rs = "1"
open = "5"
once_cell = "1"
parking_lot = "0.12"
rcgen = '0.14'
serde = { version = "1", features = ["derive"] }
serde_json = "1"
serde_yaml = "0.9.34-deprecated"
socketioxide = { version = "0.16", features = [
	"v4",
	"extensions",
	"state",
	"tracing",
] }
sqlx = { version = "0.8", features = [
	"sqlite",
	"runtime-tokio",
	"migrate",
	"json",
] }
sys-locale = "0.3"
tauri = { version = "2", features = ["macos-private-api", "protocol-asset"] }
tauri-plugin-devtools = "2"
tauri-plugin-dialog = "2"
tauri-plugin-opener = "2"
tempfile = "3"
thiserror = "2"
tokio = { version = "1", features = ["full"] }
tower-http = { version = "0.6", features = ["fs", "trace"] }
utoipa = { version = "5", features = ["axum_extras"] }
utoipa-swagger-ui = { version = "9", features = ["axum", "reqwest"] }
utoipa-axum = "0.2"
validator = { version = "0.20", features = ["derive"] }
whoami = "1.6"
