[package]
name = "synclan"
version = "0.1.0"
description = "synclan"
authors = ["The1111mp@outlook.com"]
license = "MIT"
repository = "https://github.com/1111mp/synclan.git"
default-run = "synclan"
build = "build.rs"
edition = "2024"
rust-version = "1.95"

# See more keys and their definitions at https://doc.rust-lang.org/cargo/reference/manifest.html

[lib]
crate-type = ["cdylib", "rlib", "staticlib"]
# The `_lib` suffix may seem redundant but it is necessary
# to make the lib name unique and wouldn't conflict with the bin name.
# This seems to be only an issue on Windows, see https://github.com/rust-lang/cargo/issues/8519
name = "synclan_lib"

[dependencies]
aes-gcm = { version = "0.10.3", features = ["std"] }
anyhow = { workspace = true }
apalis = { version = "1.0.0-rc.9", features = [
  "limit",
  "retry",
  "timeout",
  "tracing",
] }
apalis-codec = { version = "0.1.0-rc.9" }
apalis-sqlite = { git = "https://github.com/1111mp/apalis-sqlite" }
async-trait = "0.1.89"
axum = { version = "0.8.9", features = ["multipart"] }
axum-extra = { version = "0.12.6", features = ["typed-header"] }
axum-macros = "0.5.1"
axum-server = { version = "0.8.0", features = ["tls-rustls"] }
axum_typed_multipart = "0.16.6"
base64 = "0.22.1"
bitflags = { workspace = true }
chrono = "0.4.45"
console-subscriber = { version = "0.5.0", optional = true }
dark-light = { git = "https://github.com/rust-dark-light/dark-light" }
dashmap = "6.2.1"
dunce = "1.0.5"
flexi_logger = { workspace = true }
futures = "0.3.32"
getrandom = "0.4.2"
libsqlite3-sys = { version = "0.37.0", features = [
  "bundled-sqlcipher-vendored-openssl",
] }
local-ip-address = "0.6.13"
log = { workspace = true }
once_cell = "1.21.4"
open = "5.3.5"
parking_lot = { workspace = true }
rcgen = "0.14.8"
rustls = { version = "0.23.42", features = ["ring"] }
serde = { workspace = true, features = ["derive"] }
serde_json = { workspace = true }
serde_qs = "1.1.2"
serde_yaml_ng = { workspace = true }
socketioxide = { version = "0.18.3", features = [
  "extensions",
  "state",
  "tracing",
  "v4",
] }
sqlx = { version = "0.9.0", features = [
  "chrono",
  "json",
  "migrate",
  "runtime-tokio",
  "sqlite",
] }
sys-locale = "0.3.2"
tauri = { workspace = true, features = [
  "devtools",
  "image-ico",
  "image-png",
  "macos-private-api",
  "protocol-asset",
  "tray-icon",
] }
tauri-plugin-autostart = "2.5.1"
tauri-plugin-devtools = "2.1.0"
tauri-plugin-dialog = "2.7.1"
tauri-plugin-fs = "2.5.1"
tauri-plugin-opener = "2.5.4"
tauri-plugin-single-instance = "2.4.3"
tauri-plugin-updater = "2.10.1"
tempfile = "3.27.0"
thiserror = { workspace = true }
tokio = { workspace = true }
tokio-util = "0.7.18"
tower-http = { version = "0.6.11", features = ["cors", "fs", "trace"] }
utoipa = { version = "5.5.0", features = ["axum_extras"] }
utoipa-axum = "0.2.0"
utoipa-swagger-ui = { version = "9.0.2", features = ["axum", "reqwest"] }
validator = { version = "0.20.0", features = ["derive"] }
whoami = "2.1.2"

[build-dependencies]
tauri-build = { version = "2.6.2", features = [] }

[target."cfg(not(windows))".dependencies]
libc = "0.2.186"

[target."cfg(windows)".dependencies]
deelevate = { workspace = true }
windows = { version = "0.62.2", features = ["Win32_Globalization"] }

[features]
default = []
tauri-dev = []
tokio-trace = ["console-subscriber"]
tracing = []
